Remove lombok (#2)